# ccmap

./: .gitignore  LICENSE  MANIFEST.in  README  README.md  ccmapmodule.c  cibuildwheel.toml  makefile  pyproject.toml  setup.py  test.py  threadsTest.py
ccmap/: ccmapmodule.c  makefile  protein_vdw_map.tsv
ccmap/include/: atom_mapper.h  ccmapmodule_allocation.h  ccmapmodule_utils.h  cell.h  cell_crawler.h  chem_constants.h  config.h  convex.h  decoygen.h  encode.h  fibonacci.h  mesh.h  mesh_default.h  miscellaneous.h  molecular_object.h  my_string.h  numpy_headers.h  pathfinder.h  pdb_coordinates.h  protein_map.h  python_utils.h  sasa.h
ccmap/src/: atom_mapper.c  ccmap.c  ccmapmodule_utils.c  cell_crawler.c  convex.c  (+16 more)
data/: 2FJU_A.json  2FJU_X.json  2FJU_idfull_xyz.txt  2FJU_idfull_xyz_chainA.txt  2FJU_idfull_xyz_chainX.txt  id_xyz.txt  xyz.txt
include/: ccmapmodule_allocation.h  ccmapmodule_utils.h  cell.h  cell_crawler.h  decoygen.h  default.h  encode.h  mesh.h  mesh_io.h  molecular_object.h  parameters.h  pdb_coordinates.h  transform_mesh.h
notebook/: --= MEGADOCK POST PROCESSING =--.ipynb  benchmarks.ipynb  ccmap2_DVL.ipynb  ccmap_demo.ipynb  scratch.ipynb
pdb_data/: 1HIA.zd3.0.2.fg.fixed.out  1HIA_l_u.pdb.ms_2  1HIA_r_u.pdb.ms_2  COMPILATION  exe_ccmap  out
src/: ccmap.c  ccmapmodule_allocation.c  ccmapmodule_allocations.c  ccmapmodule_utils.c  cell_crawler.c  decoygen.c  default.c  encode.c  main.c  mesh.c  mesh_default.c  molecular_object.c  parameters.c  pdb_coordinates.c  string_test.c  test.c  transform_mesh.c
tests/: oracle.json  poses_specs.json
(+7 files in other folders)
